* Re-repair breadcrumb row alignment.

--- a/nlw/share/sass/wiki.sass
+++ b/nlw/share/sass/wiki.sass
@@ -176,8 +176,9 @@
   margin-bottom: 5px
   border-bottom: 1px dashed $light
   a
-    padding-bottom: 2px
-    *padding-bottom: 0px
+    padding-bottom: 0px
+    @media screen and (-webkit-min-device-pixel-ratio:0)
+      padding-bottom: 2px
   .spaces
     padding: 0
     margin: 0
